// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`checkboxField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u3p"
      >
        <fieldset
          class="uv_19cjf6j0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5p"
          >
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <legend
                class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u3p"
            >
              <div
                aria-disabled="false"
                class="uv_19cjf6j1 uv_9pjq8o1 uv_9pjq8o0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="uv_9pjq8o4 uv_9pjq8o3"
                  id="_r_2_"
                  name="Checkbox.value-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="uv_9pjq8o7 uv_9pjq8o6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Checkbox.value-1
                  </title>
                  <g>
                    <rect
                      class="uv_9pjq8o9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="uv_9pjq8oa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
                  style="--uv_4k0ekn3: 1;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u5j"
                  >
                    <label
                      class="uv_9pjq8oc uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
                      for="_r_2_"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="uv_19cjf6j1 uv_9pjq8o1 uv_9pjq8o0"
                data-checked="true"
                data-error="false"
              >
                <input
                  aria-checked="true"
                  aria-invalid="false"
                  class="uv_9pjq8o4 uv_9pjq8o3"
                  id="_r_5_"
                  name="Checkbox.value-2"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="uv_9pjq8o7 uv_9pjq8o6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    Checkbox.value-2
                  </title>
                  <g>
                    <rect
                      class="uv_9pjq8o9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="uv_9pjq8oa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
                  style="--uv_4k0ekn3: 1;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u5j"
                  >
                    <label
                      class="uv_9pjq8oc uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
                      for="_r_5_"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`checkboxField > should trigger events correctly with required prop 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_toi52u0 uv_toi52u2d uv_toi52u3p"
      >
        <fieldset
          class="uv_19cjf6j0"
        >
          <div
            class="uv_toi52u0 uv_toi52u2d uv_toi52u5p"
          >
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
            >
              <div
                class="uv_toi52u0 uv_toi52uv uv_toi52u2j uv_toi52u5j"
              >
                <legend
                  class="uv_17td3g90 uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9own uv_m4c9ow1a uv_m4c9ow32"
                >
                  CheckboxGroupField events
                </legend>
                <span
                  class="uv_m4c9ow0 uv_m4c9ow4 uv_m4c9ow9 uv_m4c9own uv_m4c9ow1a uv_m4c9ow2m"
                >
                  *
                </span>
              </div>
            </div>
            <div
              class="uv_toi52u0 uv_toi52u2d uv_toi52u3p"
            >
              <div
                aria-disabled="false"
                class="uv_19cjf6j1 uv_9pjq8o1 uv_9pjq8o0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="uv_9pjq8o4 uv_9pjq8o3"
                  id="_r_b_"
                  name="test.value-1"
                  type="checkbox"
                  value="value-1"
                />
                <svg
                  class="uv_9pjq8o7 uv_9pjq8o6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    test.value-1
                  </title>
                  <g>
                    <rect
                      class="uv_9pjq8o9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="uv_9pjq8oa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
                  style="--uv_4k0ekn3: 1;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u5j"
                  >
                    <label
                      class="uv_9pjq8oc uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
                      for="_r_b_"
                    >
                      Checkbox 1
                    </label>
                  </div>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="uv_19cjf6j1 uv_9pjq8o1 uv_9pjq8o0"
                data-checked="false"
                data-error="false"
              >
                <input
                  aria-checked="false"
                  aria-invalid="false"
                  class="uv_9pjq8o4 uv_9pjq8o3"
                  id="_r_e_"
                  name="test.value-2"
                  type="checkbox"
                  value="value-2"
                />
                <svg
                  class="uv_9pjq8o7 uv_9pjq8o6"
                  fill="none"
                  viewBox="0 0 24 24"
                >
                  <title>
                    test.value-2
                  </title>
                  <g>
                    <rect
                      class="uv_9pjq8o9"
                      height="16"
                      rx="0.125rem"
                      stroke-width="2"
                      width="16"
                      x="4"
                      y="4"
                    />
                    <path
                      class="uv_9pjq8oa"
                      clip-rule="evenodd"
                      d="M15.6678 5.26709C16.0849 5.6463 16.113 6.28907 15.7307 6.70276L9.29172 13.6705C9.10291 13.8748 8.83818 13.9937 8.55884 13.9998C8.2795 14.0058 8.0098 13.8984 7.81223 13.7024L4.30004 10.2185C3.89999 9.82169 3.89999 9.17831 4.30004 8.78149C4.70009 8.38467 5.34869 8.38467 5.74874 8.78149L8.50441 11.5149L14.2205 5.32951C14.6028 4.91583 15.2508 4.88788 15.6678 5.26709Z"
                      fill="white"
                      fill-rule="evenodd"
                      height="9"
                      width="12"
                      x="5"
                      y="4"
                    />
                  </g>
                </svg>
                <div
                  class="uv_toi52u0 uv_toi52u2d uv_toi52u5j"
                  style="--uv_4k0ekn3: 1;"
                >
                  <div
                    class="uv_toi52u0 uv_toi52ud uv_toi52u2j uv_toi52u5j"
                  >
                    <label
                      class="uv_9pjq8oc uv_m4c9ow0 uv_m4c9ow4 uv_m4c9owb uv_m4c9owj uv_m4c9ow1a uv_m4c9ow32"
                      for="_r_e_"
                    >
                      Checkbox 2
                    </label>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
